<resources>
    <string name="app_name">Buff Helper</string>
    <string name="buy">Buy:</string>
    <string name="item">item</string>
    <string name="buff_image_logo">buff image logo</string>
    <string name="sell">Sell:</string>
    <string name="roi">ROI:</string>
    <string name="at">AT:</string>
    <string name="profit">Profit:</string>
    <string name="roifix">ROI:</string>
    <string name="prof">Prof:</string>
    <string name="tax">Tax:</string>
    <string name="bought">bought</string>
    <string name="sold">sold</string>
    <string name="total">Total:</string>
    <string name="totaltextview">total</string>
    <string name="atcol">AT: </string>
    <string name="taxcol">Tax: </string>
    <string name="profcol">Prof: </string>
    <string name="roicol">ROI: </string>
    <string name="asd">asd</string>
    <string name="totalprof">Profit:</string>
    <string name="atspaced">AT: </string>
    <string name="taxspaced">Tax: </string>
    <string name="profspaced">Profit: </string>
    <string name="roispaced">ROI: </string>
</resources>